examples/gallery/errors/type_option_some_equality.fsl
// expected-command: verify --depth 2
// expected-result: error
// expected-kind: type
spec GalleryTypeOptionSomeEquality {
  type K = 0..1
  state { current: Option<K> }
  init { current = some(0) }
  action clear() {
    requires current == some(0)
    current = none
  }
}
